# SGM-ViT

./: .gitignore  CLAUDE.md  PROJECT_STATUS_CN.md  README.md  claude_todo.md  demo.py  pyproject.toml  requirements.txt  run_phase1.sh
SGM/: SGM.py  gaussian.py  gen_config_param.py  run.sh  stereo_config.c
core/: __init__.py  _paths.py  adaptive_precision.py  decoder_adaptive_precision.py  effvit_depth.py  effvit_qat.py  eval_utils.py  fusion.py  fusion_net.py  hybrid_model.py  pipeline.py  pruning_strategies.py  sgm_wrapper.py  sparse_attention.py  stereo_datasets.py  token_merge.py  token_reassembly.py  token_router.py  viz.py
depth_anything_v2/: .gitkeep
docs/: .gitkeep
hardware/: base_module.py  fusion_engine.py  interfaces.py
hw/: README_HW.md
memory-bank/: README.md  architecture.md  design-document.md  hardware-architecture.md  hardware-design-document.md  hardware-progress.md  paper-progress.md  phase9_regcal_lessons.md  progress.md
paper/: CAPS_MERGE_V1.md  DECODER_CAPS_V1.md  EdgeStereoDAv2.md  EdgeStereoDAv2_ICCAD.md  fusion_net_experiment_log.md  prior_experiment.md
scripts/: _a1_summary.py  ablation_a1_area_accounting.py  ablation_a1_conf_unification.py  ablation_a3_isa_coverage.py  analyze_layer_utilization.py  build_fusion_cache.py  build_fusion_cache_v3.py  common_config.py  compile_ablation_phase11.py  demo_effvit.py  demo_phase7.py  demo_phase8_pareto.py  demo_phase9_qat.py  eval_adaptive_precision.py  eval_confidence_distribution.py  eval_confidence_fusion_consistency.py  eval_decoder_adaptive_precision.py  eval_decoder_stage_precision.py  (+36 more)
(+76 files in other folders)
